--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -60,6 +60,14 @@ ion-content
       height: 50px;
     }
   }
+  p
+  {
+    margin: 10px;
+  }
+  #password
+  {
+    margin-top: 10px;
+  }
 }
 
 
