--- a/src/app/pages/transaction/alert-depot/alert-depot.page.html
+++ b/src/app/pages/transaction/alert-depot/alert-depot.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>user</ion-title>
+    <ion-title>AlertDepot</ion-title>
   </ion-toolbar>
 </ion-header>
 
